Navegação entre telas

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
       <hr class="sidebar-divider my-0">
 
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="#assistiraula">
           <i class="fas fa-fw fa-play"></i>
           <span>Assistir Aulas</span></a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#materias">
           <i class="fab fa-fw fa-wpforms"></i>
           <span>Consultar Matérias</span>
         </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="#historico">
           <i class="fas fa-fw fa-book-open"></i>
           <span>Consultar Histórico</span>
         </a>
@@ -133,6 +133,13 @@
           </ul>
         </nav>
         <!-- Topbar -->
+
+        <!-- MAIN -->
+        <main>
+
+        </main>
+        <!-- MAIN -->
+
       </div>
     </div>
   </div>
@@ -144,6 +151,7 @@
 
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="js/main.js"></script>
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="js/ruang-admin.min.js"></script>
   <script src="vendor/chart.js/Chart.min.js"></script>
